BUG: fix align items prop

--- a/src/styles/form.less
+++ b/src/styles/form.less
@@ -17,7 +17,7 @@
   .col-sm-10 {
     width: 100%;
     display: flex;
-    align-items: center;
+    align-items: baseline;
 
     .control-label {
       min-width: 150px;
